src/styles/base.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 280 10% 98%;

    --card: 0 0% 100%;
    --card-foreground: 280 10% 98%;

    --popover: 0 0% 100%;
    --popover-foreground: 280 10% 98%;

    --primary: 316 73% 52%;
    --primary-foreground: 280 10% 98%;

    --secondary: 0 0% 100%;
    --secondary-foreground: 280 10% 98%;

    --muted: 0 0% 96%;
    --muted-foreground: 280 10% 60%;

    --accent: 311 90% 60%;
    --accent-foreground: 280 10% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 280 10% 98%;

    --border: 0 0% 90%;
    --input: 0 0% 90%;
    --ring: 316 73% 52%;

    --radius: 1rem;
  }

  * {
    @apply border-border;
  }

  html, body {
    @apply overflow-x-hidden max-w-[100vw];
  }

  #root {
    @apply overflow-x-hidden max-w-[100vw];
  }

  body {
    @apply bg-background text-foreground antialiased;
    position: relative;
  }
}

